--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>. . . : : : f o o b u g : : : . . .</title>
+    <title>. . . : : : f o o b u g s : : : . . .</title>
   </head>
   <body>
 
