--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html>
+<!DOCTYPE html lang="en">
   <head>
-    <title>. . . : : : f o o b u g s : : : . . .</title>
+    <title>foobug - CTF & Lessons learned</title>
   </head>
   <body>
 
