--- a/archives.html
+++ b/archives.html
@@ -26,7 +26,7 @@
 <h1>Archives for foobug.github.io</h1>
 
 <dl>
-    <dt>So 05 Februar 2023</dt>
+    <dt>Mo 13 Februar 2023</dt>
     <dd><a href="https://foobug.github.io/newsletter001.html">newsletter#001</a></dd>
 </dl>
         </div>
