--- a/newsletter001.html
+++ b/newsletter001.html
@@ -50,7 +50,7 @@
     <h2>General Tech</h2>
 <ul>
 <li>
-<p><a href="https://www.backblaze.com/blog/backblaze-drive-stats-for-2022/">Backblaze</a> released there harddrive stats for 2022</p>
+<p><a href="https://www.backblaze.com/blog/backblaze-drive-stats-for-2022/">Backblaze</a> released their harddrive stats for 2022</p>
 </li>
 <li>
 <p><a href="https://www.servethehome.com/intel-nuc-12-pro-wall-street-canyon-review-fanned-and-fanless/">servethehome tested the new Intel NUCs</a> and they sound great</p>
@@ -74,7 +74,7 @@
 <h2>Security</h2>
 <ul>
 <li>
-<p><a href="https://twitter.com/jhencinski/status/1621253836143820801">Short Summary of ExpelSecurity´s Annual Trend Report</a> shows that <a href="https://jeffreyappel.nl/protect-against-aitm-mfa-phishing-attacks-using-microsoft-technology/">Adversary-in-the-middle (AiTM) phishing</a> increases - Defense with FIDO2-Token or Certificate-Auth !</p>
+<p><a href="https://twitter.com/jhencinski/status/1621253836143820801">Short Summary of ExpelSecurity´s Annual Trend Report</a> shows that <a href="https://jeffreyappel.nl/protect-against-aitm-mfa-phishing-attacks-using-microsoft-technology/">Adversary-in-the-middle (AiTM) phishing</a> increases - Mitigate via FIDO2-Tokens or Certificate-Auth !</p>
 </li>
 <li>
 <p><a href="https://twitter.com/rmhrisk/status/1623739442203852800">ACME for TLS certificate-enrollment</a> changed the TLS ecosystem in a good way, but more change is needed and the IETF is working on it</p>
