added new blog post

--- a/archives.html
+++ b/archives.html
@@ -26,6 +26,8 @@
 <h1>Archives for foobug.github.io</h1>
 
 <dl>
+    <dt>Do 06 April 2023</dt>
+    <dd><a href="https://foobug.github.io/newsletter002.html">newsletter#002</a></dd>
     <dt>Mo 13 Februar 2023</dt>
     <dd><a href="https://foobug.github.io/newsletter001.html">newsletter#001</a></dd>
 </dl>
