it-conferences-2024 page added

--- a/404.html
+++ b/404.html
@@ -21,6 +21,7 @@
         <nav id="menu"><ul>
             <li><a class="active" href="https://www.mru.ovh/pages/about.html">about</a></li>
             <li><a class="active" href="https://www.mru.ovh/pages/contact.html">contact</a></li>
+            <li><a class="active" href="https://www.mru.ovh/pages/it-conferences-2024.html">it-conferences-2024</a></li>
             <li><a class="active" href="https://www.mru.ovh/pages/links.html">links</a></li>
         </ul></nav><!-- /#menu -->
         </header><!-- /#banner -->
