--- a/archives.html
+++ b/archives.html
@@ -19,6 +19,7 @@
         <nav id="menu"><ul>
             <li><a class="active" href="https://www.mru.ovh/pages/about.html">about</a></li>
             <li><a class="active" href="https://www.mru.ovh/pages/contact.html">contact</a></li>
+            <li><a class="active" href="https://www.mru.ovh/pages/it-conferences-2024.html">it-conferences-2024</a></li>
             <li><a class="active" href="https://www.mru.ovh/pages/links.html">links</a></li>
         </ul></nav><!-- /#menu -->
         </header><!-- /#banner -->
@@ -26,7 +27,7 @@
 <h1>Archives for www.mru.ovh</h1>
 
 <dl>
-    <dt>Do 06 April 2023</dt>
+    <dt>Sa 13 Januar 2024</dt>
     <dd><a href="https://www.mru.ovh/newsletter002.html">newsletter#002</a></dd>
     <dt>Mo 13 Februar 2023</dt>
     <dd><a href="https://www.mru.ovh/newsletter001.html">newsletter#001</a></dd>
